# hello

./: GEMINI.md  check-json1-extension.py  check-sqlite-version.py  desktop.ini  fetch_node_info.py  fetch_node_stats.py  fetch_value.py  filelist.efu  hello-status.py  index.html  insert_value.py  package-lock.json  package.json  tkinter-dnd.py  tsconfig.json
hello-blessed/: hello-blessed.py
hello-ntfs/docs/: efu-spec.md  fsutil-example-cp437.txt  fsutil-example.txt  mft-resident-data.md  windows-user-name.md
hello-ntfs/resident-data-stats/: MFT-Resident-Data-Limit.md  README.md  example-output.txt  resident-data-stats.py
hello-opendht-proxy/: README.md  fetch_node_stats.py  fetch_value.py
hello-pouchdb/: leveldb_reader.js  pouchdb_example.js
hello-pouchdb/my_database/: 000016.ldb  000021.ldb  LOG  LOG.old
hello-rich/: hello-rich.py
hello-tsx/: .gitignore  filelist.efu  package.json  tsconfig.json
hello-tsx/src/: CountDownTimer.html  CountDownTimer.js
hello-tsx/src/components/ui/: button.js  card.js  input.js
hello-tsx/src/lib/: utils.js
hello-vscode-addon/: CHANGELOG.md  README.md  package.json
local-file-web-server/: .gitignore  filestore.js  generatePasswords.js  main.js  memorystore.js  package-lock.json  package.json  passwords.json
my_database/: 000018.ldb  MANIFEST-000023
myuuid/: README.md  filelist.efu  pyproject.toml
myuuid/myuuid/: __init__.py
myuuid/tests/: test_myuuid.py
src/: CountDownTimer.js  CountDownTimer.tsx  extension.ts
webp_to_ico/: webp_to_ico.py
