[tool.poetry]
name = "myuuid"
version = "0.1.0"
description = "A simple module to generate deterministic UUIDv5."
authors = ["Takashi Sasaki <takashi316@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"